tests/ui/traits/negative-bounds/opaque-type-unsatisfied-fn-bound.stderr
error[E0271]: type mismatch resolving `produce::{opaque#0} normalizes-to _`
  --> $DIR/opaque-type-unsatisfied-fn-bound.rs:5:17
   |
LL | fn produce() -> impl !Fn<(u32,)> {}
   |                 ^^^^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `produce::{opaque#0} normalizes-to _`
  --> $DIR/opaque-type-unsatisfied-fn-bound.rs:5:34
   |
LL | fn produce() -> impl !Fn<(u32,)> {}
   |                                  ^^ types differ

error[E0277]: the size for values of type `impl !Fn<(u32,)>` cannot be known at compilation time
  --> $DIR/opaque-type-unsatisfied-fn-bound.rs:5:17
   |
LL | fn produce() -> impl !Fn<(u32,)> {}
   |                 ^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `impl !Fn<(u32,)>`
   = note: the return type of a function must have a statically known size

error[E0271]: type mismatch resolving `produce::{opaque#0} normalizes-to _`
  --> $DIR/opaque-type-unsatisfied-fn-bound.rs:5:1
   |
LL | fn produce() -> impl !Fn<(u32,)> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ types differ

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0271, E0277.
For more information about an error, try `rustc --explain E0271`.
